--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <footer>
         <p>Copyright &copy;</p>
     </footer>
+    <form action="">
+        <p>Login Form</p>
+    </form>
 </body>
 </html>
